// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > '"file" type used for body param' 1`] = `
[
  {
    "message": "ENUM must be equal to one of the allowed values
(array, boolean, integer, null, number, object, string)

  18 |           "in": "body",
  19 |           "schema": {
> 20 |             "type": "file"
     |                     ^^^^^^ Did you mean null here?
  21 |           }
  22 |         }
  23 |       ],",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > '"file" type used for non-formData par…' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

  14 |           "required": true
  15 |         },
> 16 |         {
     |         ^ schema is missing here!
  17 |           "name": "image",
  18 |           "in": "header",
  19 |           "type": "file"",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > '"multi" header param' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

   8 |     "/users": {
   9 |       "parameters": [
> 10 |         {
     |         ^ schema is missing here!
  11 |           "name": "usernames",
  12 |           "in": "header",
  13 |           "type": "array",",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > '"multi" path param' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

   8 |     "/users/{usernames}": {
   9 |       "parameters": [
> 10 |         {
     |         ^ schema is missing here!
  11 |           "name": "usernames",
  12 |           "in": "path",
  13 |           "required": true,",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > '$ref to invalid Path object' 1`] = `
[
  {
    "message": "ADDITIONAL PROPERTY must NOT have additional properties

  16 |     },
  17 |     "/products": {
> 18 |       "type": "object",
     |       ^^^^^^ type is not expected to be here!
  19 |       "properties": {
  20 |         "id": {
  21 |           "type": "number"",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'Schema with "anyOf"' 1`] = `
[
  {
    "message": "ADDITIONAL PROPERTY must NOT have additional properties

  12 |             "description": "hello world",
  13 |             "schema": {
> 14 |               "anyOf": [
     |               ^^^^^^^ anyOf is not expected to be here!
  15 |                 {
  16 |                   "properties": {
  17 |                     "firstName": {",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'Schema with "oneOf"' 1`] = `
[
  {
    "message": "ADDITIONAL PROPERTY must NOT have additional properties

  12 |             "description": "hello world",
  13 |             "schema": {
> 14 |               "oneOf": [
     |               ^^^^^^^ oneOf is not expected to be here!
  15 |                 {
  16 |                   "properties": {
  17 |                     "firstName": {",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid param type' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

   8 |     "/users": {
   9 |       "parameters": [
> 10 |         {
     |         ^ schema is missing here!
  11 |           "name": "user",
  12 |           "in": "query",
  13 |           "type": "user"",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid parameter location' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

  14 |           "type": "string"
  15 |         },
> 16 |         {
     |         ^ schema is missing here!
  17 |           "name": "img_id",
  18 |           "in": "cookie",
  19 |           "type": "number"",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid response code' 1`] = `
[
  {
    "message": "ADDITIONAL PROPERTY must NOT have additional properties

   9 |       "get": {
  10 |         "responses": {
> 11 |           "foobar": {
     |           ^^^^^^^^ foobar is not expected to be here!
  12 |             "description": "hello world"
  13 |           }
  14 |         }",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid response header type' 1`] = `
[
  {
    "message": "ENUM must be equal to one of the allowed values
(string, number, integer, boolean, array)

  16 |               },
  17 |               "Last-Modified": {
> 18 |                 "type": "date"
     |                         ^^^^^^ Did you mean number here?
  19 |               }
  20 |             }
  21 |           }",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid response schema type' 1`] = `
[
  {
    "message": "ENUM must be equal to one of the allowed values
(array, boolean, integer, null, number, object, string)

  12 |             "description": "hello world",
  13 |             "schema": {
> 14 |               "type": "user"
     |                       ^^^^^^ Did you mean number here?
  15 |             }
  16 |           }
  17 |         }",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid schema type' 1`] = `
[
  {
    "message": "ENUM must be equal to one of the allowed values
(array, boolean, integer, null, number, object, string)

  12 |           "in": "body",
  13 |           "schema": {
> 14 |             "type": "user"
     |                     ^^^^^^ Did you mean number here?
  15 |           }
  16 |         }
  17 |       ],",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'invalid security scheme for OpenAPI 3…' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'name'

  23 |   "components": {
  24 |     "securitySchemes": {
> 25 |       "tlsAuth": {
     |                  ^ name is missing here!
  26 |         "type": "mutualTLS"
  27 |       }
  28 |     }",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'non-primitive param type' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

   8 |     "/users": {
   9 |       "parameters": [
> 10 |         {
     |         ^ schema is missing here!
  11 |           "name": "user",
  12 |           "in": "query",
  13 |           "type": "object"",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'non-primitive response header type' 1`] = `
[
  {
    "message": "ENUM must be equal to one of the allowed values
(string, number, integer, boolean, array)

  16 |               },
  17 |               "Last-Modified": {
> 18 |                 "type": "object"
     |                         ^^^^^^^^ Did you mean boolean here?
  19 |               }
  20 |             }
  21 |           }",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'non-required path param' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

  14 |           "type": "string"
  15 |         },
> 16 |         {
     |         ^ schema is missing here!
  17 |           "name": "img_id",
  18 |           "in": "path",
  19 |           "type": "number"",
  },
]
`;

exports[`Invalid APIs (Swagger 2.0 and OpenAPI 3.x schema validation) > 'optional path param' 1`] = `
[
  {
    "message": "REQUIRED must have required property 'schema'

  14 |           "type": "string"
  15 |         },
> 16 |         {
     |         ^ schema is missing here!
  17 |           "name": "img_id",
  18 |           "in": "path",
  19 |           "required": false,",
  },
]
`;
